Replace PUT with PATCH on user
